--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
